# Arbet

./: .dockerignore  .env.devnet  .env.example  .gitignore  Anchor.toml  CLE-130-IMPLEMENTATION-PLAN.md  CLE-130-IMPLEMENTATION-SUMMARY.md  CLE-130-INDEX.md  CLE-130-QUICK-START.md  CLE-130-README.md  CLE-130-SUMMARY.txt  CLE-130-TECHNICAL-SPECS.md  COMPLETION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  Dockerfile.backend  Dockerfile.frontend  EXECUTION_PROGRESS.md  IMPLEMENTATION-STATUS.md  INFRASTRUCTURE_CHECKLIST.md  INFRASTRUCTURE_INDEX.md  INFRASTRUCTURE_REPORT.md  INFRASTRUCTURE_SUMMARY.txt  INFRASTRUCTURE_VISUAL_SUMMARY.txt  Makefile  PHASE2_SETUP_GUIDE.md  PROJECT_STATUS.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: arbet.db  pyproject.toml  requirements.txt
backend/backend/: __init__.py
backend/backend/agent/: coordinator.py  executor.py  forecaster.py  graph.py  scout.py
backend/backend/api/: server.py  service.py
backend/backend/db/: __init__.py  init.py  models.py  rag.py
backend/backend/models/: schemas.py
backend/tests/: conftest.py  test_agents.py  test_db_init.py  test_integration.py
contracts/: Cargo.toml
contracts/programs/arbet/: Cargo.toml  EXECUTION_SUMMARY.md
contracts/programs/arbet/src/: lib.rs  lib.rs.tests  tests.rs
docs/: ARCHITECTURE_DIAGRAM.md  Arbiter_Agents_PRD_v2.docx  ENGINEERING_BREAKDOWN.md  EXECUTIVE_SUMMARY.md  INDEX.md  PRD.md
scripts/: deploy-devnet.sh  deploy-local.sh  deploy.sh  health-check.sh  init-db.sql  verify_deployment.sh
web/: .gitignore  CLE-132-IMPLEMENTATION.md  README.md  (+5 more)
(+38 files in other folders)
