[tool.poetry]
name = "arbet-agents"
version = "0.1.0"
description = "Autonomous AI agent swarm for Solana prediction market arbitrage"
authors = ["Arbet Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0"
pydantic = "^2.5"
solana = "^0.33.0"
solders = "^0.21.0"
aiohttp = "^3.9.0"
tenacity = "^8.2.3"
langgraph = "^0.0.16"
langchain = "^0.1.0"
ollama = "^0.0.5"
numpy = "^1.26.0"
pandas = "^2.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
pylint = "^3.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
